crates/oxc_react_compiler/tests/snapshots/rest-param-with-identifier.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/rest-param-with-identifier.js
---
import { c as _c } from "react/compiler-runtime";
function Component(foo, ...t0) {
	const $ = _c(3);
	const bar = t0;
	let t1;
	if ($[0] !== bar || $[1] !== foo) {
		t1 = [foo, bar];
		$[0] = bar;
		$[1] = foo;
		$[2] = t1;
	} else {
		t1 = $[2];
	}
	return t1;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [
		"foo",
		"bar",
		"baz"
	]
};
