crates/oxc_react_compiler/tests/snapshots/return-conditional.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/return-conditional.js
---
function foo(a, b) {
	if (a == null) {
		return null;
	} else {
		return b;
	}
}
export const FIXTURE_ENTRYPOINT = {
	fn: foo,
	params: ["TodoAdd"],
	isComponent: "TodoAdd"
};
