crates/oxc_react_compiler/tests/snapshots/return-undefined.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/return-undefined.js
---
function Component(props) {
	if (props.cond) {
		return;
	}
	return props.value;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: ["TodoAdd"],
	isComponent: "TodoAdd"
};
