crates/oxc_react_compiler/tests/snapshots/reverse-postorder.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/reverse-postorder.js
---
function Component(props) {
	if (props.cond) {
		bb0: switch (props.test) {
			case 0: {
				break bb0;
			}
			case 1: {
				break bb0;
			}
			case 2:
			default:
		}
	} else {
		if (props.cond2) {}
	}
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: ["TodoAdd"],
	isComponent: "TodoAdd"
};
