crates/oxc_react_compiler/tests/snapshots/rewrite-phis-in-lambda-capture-context.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/rewrite-phis-in-lambda-capture-context.js
---
function Component() {
	const get4 = _temp2;
	return get4;
}
function _temp2() {
	while (bar()) {
		if (baz) {
			bar();
		}
	}
	return _temp;
}
function _temp() {
	return 4;
}
