crates/oxc_react_compiler/tests/snapshots/round3_effect_read_vs_capture.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/round3_effect_read_vs_capture.js
---
// Round 3: InferMutationAliasingRanges — location difference cascading to effect/reactive diffs
// Root cause: loc diff at statement level (e.g., 26:8-26:16 vs 26:2-26:22)
// This propagates into effect annotation (read vs capture) and reactive flag diffs
// Frontier: InferMutationAliasingRanges pass
// Source: ParseBusinessProfile.js, EditorAdgroup...PluginCommon.js
function useParseProfile(node) {
	Object.keys(profile).forEach(_temp);
	const commands = [];
	node.forEachChildWithTag("command", (commandNode) => {
		commands.push({
			name,
			description
		});
	});
}
function _temp(key) {}
