crates/oxc_react_compiler/tests/snapshots/round3_effect_read_vs_capture_v2.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/round3_effect_read_vs_capture_v2.js
---
import { c as _c } from "react/compiler-runtime";
// Round 3: effect read vs capture — v2
// Pattern: variable from ternary → object literal → forEach lambda mutation
// Source: ParseBusinessProfile.js
function useProfile(node) {
	const $ = _c(2);
	let profile;
	if ($[0] !== node) {
		const childNode = node.maybeChild("key");
		const value = childNode ? childNode.contentString() : undefined;
		profile = { key_value: value };
		Object.keys(profile).forEach((key) => {
			if (profile[key] == null) {
				delete profile[key];
			}
		});
		$[0] = node;
		$[1] = profile;
	} else {
		profile = $[1];
	}
	return profile;
}
