crates/oxc_react_compiler/tests/snapshots/round3_outlined_naming.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/round3_outlined_naming.js
---
import { c as _c } from "react/compiler-runtime";
// @enableFunctionOutlining
// Minimized repro for C5: outlined function naming divergence.
// When source code has variables named _temp/_temp2, Babel's generateUid
// skips those names, but the Rust compiler's blind counter doesn't.
function Component(props) {
	const $ = _c(2);
	let t0;
	if ($[0] !== props.items) {
		t0 = props.items.map(_temp3);
		$[0] = props.items;
		$[1] = t0;
	} else {
		t0 = $[1];
	}
	return t0;
}
function _temp3() {
	return <div />;
}
